welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:3: error: not found: type Bolean
	def finish():Bolean = {
                     ^